--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
  </head>
  <body>
   <p style="color:blue; background-color:pink;">
-  I see that you have clicked on my website. Congratulations!
+  I see that you have clicked on my website. Congratulations
+   /*comment*/
   </p>
  </body>
 </html>
 
-comment
+
